// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WaitingScreenContent renders the themed 8-point bar in dark 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#013366",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "paddingBottom": 8,
      }
    }
    onLayout={[Function]}
    style={
      {
        "opacity": 0,
      }
    }
    testID="com.ariesbifold:id/WaitingScreenContentViewport"
  >
    <View>
      <View
        style={
          {
            "gap": 8,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "gap": 2,
            }
          }
          testID="com.ariesbifold:id/WaitingScreenContentStatus"
        >
          <View
            accessibilityLabel="Loading account"
            accessibilityRole="progressbar"
            accessibilityState={
              {
                "busy": true,
              }
            }
            accessible={true}
            style={
              {
                "overflow": "hidden",
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#EDEBE9",
                  "height": 8,
                  "width": "100%",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#FCBA19",
                    "bottom": 0,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "transform": [
                      {
                        "translateX": -375,
                      },
                      {
                        "scaleX": 0,
                      },
                      {
                        "translateX": 375,
                      },
                    ],
                    "width": "100%",
                  }
                }
              />
            </View>
          </View>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 14,
                  "fontWeight": "normal",
                },
                {
                  "color": "#FFFFFF",
                  "lineHeight": 21,
                  "paddingHorizontal": 24,
                  "paddingVertical": 6,
                  "textAlign": "center",
                },
              ]
            }
          >
            Loading account
          </Text>
        </View>
        <View
          style={
            {
              "justifyContent": "center",
              "minHeight": 0,
              "paddingHorizontal": 24,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "BCSans-Bold",
                  "fontSize": 26,
                  "fontWeight": "normal",
                },
                {
                  "color": "#FCBA19",
                  "fontSize": 24,
                  "lineHeight": 36,
                  "textAlign": "center",
                },
              ]
            }
          >
            Preparing
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "alignItems": "center",
            "marginTop": 8,
          }
        }
      />
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`WaitingScreenContent renders the themed 8-point bar in light 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "paddingBottom": 8,
      }
    }
    onLayout={[Function]}
    style={
      {
        "opacity": 0,
      }
    }
    testID="com.ariesbifold:id/WaitingScreenContentViewport"
  >
    <View>
      <View
        style={
          {
            "gap": 8,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "gap": 2,
            }
          }
          testID="com.ariesbifold:id/WaitingScreenContentStatus"
        >
          <View
            accessibilityLabel="Loading account"
            accessibilityRole="progressbar"
            accessibilityState={
              {
                "busy": true,
              }
            }
            accessible={true}
            style={
              {
                "overflow": "hidden",
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#FAF9F8",
                  "height": 8,
                  "width": "100%",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#F8BA47",
                    "bottom": 0,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "transform": [
                      {
                        "translateX": -375,
                      },
                      {
                        "scaleX": 0,
                      },
                      {
                        "translateX": 375,
                      },
                    ],
                    "width": "100%",
                  }
                }
              />
            </View>
          </View>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 14,
                  "fontWeight": "normal",
                },
                {
                  "color": "#474543",
                  "lineHeight": 21,
                  "paddingHorizontal": 24,
                  "paddingVertical": 6,
                  "textAlign": "center",
                },
              ]
            }
          >
            Loading account
          </Text>
        </View>
        <View
          style={
            {
              "justifyContent": "center",
              "minHeight": 0,
              "paddingHorizontal": 24,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#1E5189",
                  "fontFamily": "BCSans-Bold",
                  "fontSize": 26,
                  "fontWeight": "normal",
                },
                {
                  "color": "#013366",
                  "fontSize": 24,
                  "lineHeight": 36,
                  "textAlign": "center",
                },
              ]
            }
          >
            Preparing
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "alignItems": "center",
            "marginTop": 8,
          }
        }
      />
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
